kustomize/hotels/overlays/dev/travel-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-bff
spec:
  template:
    spec:
      containers:
        - name: app
          image: 381491947495.dkr.ecr.ap-southeast-2.amazonaws.com/travel-bff:dev
