kustomize/hotels/overlays/dev/travel-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-ui
spec:
  template:
    spec:
      containers:
        - name: app
          image: 381491947495.dkr.ecr.ap-southeast-2.amazonaws.com/travel-ui:httpd8080
