kustomize/hotels/overlays/dev/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hotels
spec:
  host: hotels-travel-dev.apps.rosa.q4q0q7j8e3t4y1y.oynm.p3.openshiftapps.com
